--- a/src/styles/BottomNavigation.css
+++ b/src/styles/BottomNavigation.css
@@ -49,11 +49,11 @@
 }
 
 .btmNav__option.active {
-  color: #03875f !important;
+  color: #21fc7a !important;
 }
 
 .btmNav__optionDark.btmNav__option.active {
-  color: #03875f !important;
+  color: #21fc7a !important;
 }
 
 .btmNav__optionDark > .navBtm__icon {
