--- a/src/styles/PostForm.css
+++ b/src/styles/PostForm.css
@@ -156,7 +156,7 @@
 }
 
 .addFab__icon {
-    background-color: #4caf50 !important;
+    background-color: #21fc7a !important;
     color: white !important;
 }
 
