--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 * {
 	margin: 0;
 	padding: 0;
@@ -10,7 +12,6 @@
 .app {
 	height: 100vh;
 	width: 100%;
-	background-color: #ffffff;
 }
 
 .app__body {
