--- a/src/styles/BottomNavigation.css
+++ b/src/styles/BottomNavigation.css
@@ -34,7 +34,7 @@
 .btmNav__option {
   -webkit-tap-highlight-color: transparent;
   position: relative;
-  color: rgba(0,0,0,.6);
+  color: #576870;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -49,12 +49,14 @@
 }
 
 .btmNav__option.active {
-  color: #21fc7a !important;
+  /* color: #3145f7 !important; */
+  color: #1fbb5d !important;
 }
 
 .btmNav__optionDark.btmNav__option.active {
-  color: #21fc7a !important;
+  color: #1fbb5d !important;
 }
+
 
 .btmNav__optionDark > .navBtm__icon {
   stroke: #242526 ;
