--- a/src/styles/Chat.css
+++ b/src/styles/Chat.css
@@ -1,7 +1,8 @@
 .chat {
     display: flex;
     align-items: center;
-    padding: 0 10px;
+    padding: 0px 10px 7px 10px;
+    height: 60px;
     background-color: #ffffff;
 }
 
@@ -17,9 +18,9 @@ a:link {
     display: flex;
     margin-left: 10px;
     align-items: center;
-    padding: 15px 0px;
     border-bottom: 1px solid rgb(241, 241, 241);
     flex: 1;
+    padding-bottom: 10px;
 }
 
 .chatDark .chat__text {
@@ -31,39 +32,50 @@ a:link {
     flex-direction: column;
     flex: 1;
 
+    height: 100%;
+
 }
 
-.chat__textInfo h4 {
+.chat__textInfoTop {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.chat__textInfoTop h4 {
     font-size: 16px;
-    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-        "Lucida Sans", Arial, sans-serif;
-    /* font-weight: lighter; */
-    color: rgb(34, 34, 34);
 }
 
-.chatDark .chat__textInfo h4 {
+.chatDark .chat__textInfoTop h4 {
     color: rgb(255, 255, 255);
 }
 
 .chat__textInfo>p {
+    display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  overflow-wrap: break-word;
+  align-items: center;
+  text-overflow:ellipsis;
+  -webkit-box-orient: vertical;
+  white-space: pre-wrap;
     color: #606060;
     font-size: 15px;
-    height: 20px;
-    overflow: hidden;
-    word-break: break-all;
     margin-right: 10px;
+    /* padding-bottom: 10px; */
 }
 
-.chatDark .chat__textInfo>p {
+.chatDark .chat__timestamp {
     color: #a39d9d;
 }
 
-.chat__text>p {
+.chat__timestamp {
     color: gray;
     font-size: 12px;
 }
 
-.chatDark .chat__text>p {
+.chatDark .chat__message {
     color: #a7a1a1;
 }
 
