--- a/src/styles/CreatePost.module.css
+++ b/src/styles/CreatePost.module.css
@@ -42,7 +42,11 @@
     border: none;
     margin-left: 10px;
 }
-
+.input:focus-visible {
+    outline-offset: 0px;
+    outline: none;
+  }
+  
 .input::placeholder{
     font-size: 15px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
