--- a/src/styles/ErrorToast.module.css
+++ b/src/styles/ErrorToast.module.css
@@ -5,8 +5,10 @@
     width: 100%;
     min-height: 100px;
     position:fixed;
-    bottom: 60px;
-z-index: -1;
+    user-select: none;
+    user-zoom: none;
+    bottom: 58px;
+z-index: 100;
 background-color: #fff;
     box-shadow: 0px 5px 30px -5px rgba(0, 0, 0, 0.3),
 		-1px -1px 2px -1px rgba(0, 0, 0, 0.2);
@@ -38,19 +40,14 @@ border: 1px solid rgb(46, 45, 45);
     align-items: center;
     justify-content: center;
     border-radius: 50%;
+    background-color: rgb(54, 49, 49);
     height: 50px;
     width: 50px;
-}
-
-.status img {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
 }
 
 .statusIcon{
 color: #ffffff;
-font-size: 26px;
+font-size: 28px;
 }
 
 .toastInfo{
@@ -65,11 +62,12 @@ font-size: 26px;
 }
 
 .toastBtm button, .errorInfo button {
-    padding: 8px;
+    padding: 8px 13px;
     margin: 0 10px 10px 0;
     border-radius: 5px;
     border-color: #03875f;
     cursor: pointer;
+    font-size: 16px;
     background-color: #fff;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -84,11 +82,6 @@ font-size: 26px;
 .errorMsgDark button {
     background-color: #000;
     color: #fff;
-}
-
-.errorMsgDark img {
-    border-radius: 50%;
-    user-select: none !important;
 }
 
 .errorInfo{
