--- a/src/styles/PostCard.module.css
+++ b/src/styles/PostCard.module.css
@@ -223,7 +223,7 @@ color: #576870;
 .content img {
   width: 100%;
   max-width: 700px;
-  object-fit: fill;
+  object-fit: cover;
   max-height: 770px;
   min-height: 400px;
   user-select: none !important;
@@ -358,7 +358,7 @@ color: #576870;
   flex-direction: column;
   /* margin: -8px 10px -2px 10px; */
   /* padding: 2px; */
-border-top: 1px solid rgb(240, 237, 237);
+/* border-top: 1px solid rgb(240, 237, 237); */
 }
 
 .bottomCounts {
@@ -407,7 +407,7 @@ border-top: 1px solid rgb(240, 237, 237);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 10px 0 10px 0;
+  margin: 6px 0 10px 0;
 }
 
 .bottomOption{
