--- a/src/components/comment/CommentCard.module.css
+++ b/src/components/comment/CommentCard.module.css
@@ -1,9 +1,6 @@
 .commentCard {
     display: flex;
     padding: 10px;
-    flex-direction: column;
-
-
     user-select: none !important;
     -moz-user-select:none;
     -ms-user-select:none;
@@ -16,9 +13,14 @@
     color: white;
 }
 
+.replyCard {
+    margin-left: -7px;
+    margin-top: 15px;
+}
+
 .commentCardMain {
     display: flex;
-    
+    flex-direction: column;
 }
 
 .commentCardMainLeft {
@@ -29,6 +31,14 @@
 
 .avatar {
     margin-right: 10px;
+    height: 30px !important;
+    width: 30px !important;
+}
+
+.replyAvatar {
+    margin-right: 10px;
+    height: 25px !important;
+    width: 25px !important;
 }
 
 .thread {
@@ -76,6 +86,7 @@
 }
 
 .commentCardBoxText {
+    display: flex;
  margin-top: 3px;
  line-height: 20px;
  white-space: pre-wrap !important;
@@ -84,10 +95,15 @@
  font-size: 15px;
 }
 
+.replyingTo{
+    color: #1fbb5d;
+}
+
 .commentCardBtm {
     display: flex;
     flex-direction: flex;
     justify-content: space-between;
+    margin-top: 5px;
 }
 
 .commentCardBtmLeft {
@@ -96,9 +112,9 @@
 }
 
 
-.commentCardBtmRight {
+/* .commentCardBtmRight {
 
-}
+} */
 
 .commentCardBtmLeftLike {
     margin:0px 20px 0px 10px ;
